[gd_scene load_steps=26 format=4 uid="uid://cmlty4hkxhan8"]

[ext_resource type="Script" uid="uid://77258fkcditt" path="res://level.gd" id="1_i558w"]
[ext_resource type="Texture2D" uid="uid://c0xb3mud6224p" path="res://asets/oak_woods_v1.0/oak_woods_v1.0/oak_woods_tileset.png" id="2_cuxq2"]
[ext_resource type="PackedScene" uid="uid://b74lucmfkhm23" path="res://door.tscn" id="2_wvr33"]
[ext_resource type="PackedScene" uid="uid://bmy326nu7hcwb" path="res://Player/player.tscn" id="3_wvr33"]
[ext_resource type="Script" uid="uid://b7n7ntu4dn6iv" path="res://Player/player.gd" id="4_sgm4o"]
[ext_resource type="PackedScene" uid="uid://dmr0fcamx7t56" path="res://addons/virtual_joystick/virtual_joystick_scene.tscn" id="5_6r3eb"]
[ext_resource type="Texture2D" uid="uid://dk1231tr564ve" path="res://asets/XBOX BUTTONS - Premium Assets/XBOX BUTTONS - Premium Assets/XBOX BUTTONS - Premium Assets/Digital Buttons/ABXY/button_xbox_digital_a_10.png" id="6_2pufk"]
[ext_resource type="Texture2D" uid="uid://w7rc6nnw37qm" path="res://asets/XBOX BUTTONS - Premium Assets/XBOX BUTTONS - Premium Assets/XBOX BUTTONS - Premium Assets/Digital Buttons/ABXY/button_xbox_digital_a_9.png" id="7_btc8u"]
[ext_resource type="Texture2D" uid="uid://d1so5rp8yriag" path="res://asets/XBOX BUTTONS - Premium Assets/XBOX BUTTONS - Premium Assets/XBOX BUTTONS - Premium Assets/Digital Buttons/ABXY/button_xbox_digital_y_10.png" id="8_ikghu"]
[ext_resource type="Texture2D" uid="uid://5may7oq5gkun" path="res://asets/XBOX BUTTONS - Premium Assets/XBOX BUTTONS - Premium Assets/XBOX BUTTONS - Premium Assets/Digital Buttons/ABXY/button_xbox_digital_y_9.png" id="9_i6smf"]
[ext_resource type="Texture2D" uid="uid://jc62ijivd3bb" path="res://asets/XBOX BUTTONS - Premium Assets/XBOX BUTTONS - Premium Assets/XBOX BUTTONS - Premium Assets/Digital Buttons/Shoulder/button_xbox_digital_bumper_light_3.png" id="10_d4rhq"]
[ext_resource type="Texture2D" uid="uid://cg2motmpu7bl2" path="res://asets/XBOX BUTTONS - Premium Assets/XBOX BUTTONS - Premium Assets/XBOX BUTTONS - Premium Assets/Digital Buttons/Shoulder/button_xbox_digital_bumper_dark_3.png" id="11_ldfcd"]
[ext_resource type="Script" uid="uid://47mvd41fhs51" path="res://botton_dash.gd" id="12_41lt0"]
[ext_resource type="Texture2D" uid="uid://c1r86m3ys7dl5" path="res://asets/XBOX BUTTONS - Premium Assets/XBOX BUTTONS - Premium Assets/XBOX BUTTONS - Premium Assets/Digital Buttons/ABXY/button_xbox_digital_x_10.png" id="13_t8cg7"]
[ext_resource type="Texture2D" uid="uid://bynjavf38uocv" path="res://asets/XBOX BUTTONS - Premium Assets/XBOX BUTTONS - Premium Assets/XBOX BUTTONS - Premium Assets/Digital Buttons/ABXY/button_xbox_digital_x_9.png" id="14_o5ykh"]
[ext_resource type="Texture2D" uid="uid://diung3jy1e7fy" path="res://asets/XBOX BUTTONS - Premium Assets/XBOX BUTTONS - Premium Assets/XBOX BUTTONS - Premium Assets/Digital Buttons/ABXY/button_xbox_digital_b_10.png" id="15_e6ygx"]
[ext_resource type="Texture2D" uid="uid://cpgapurwqtjiv" path="res://asets/XBOX BUTTONS - Premium Assets/XBOX BUTTONS - Premium Assets/XBOX BUTTONS - Premium Assets/Digital Buttons/ABXY/button_xbox_digital_b_9.png" id="16_xlxjt"]
[ext_resource type="Texture2D" uid="uid://cgoksxwvjmb1t" path="res://asets/XBOX BUTTONS - Premium Assets/XBOX BUTTONS - Premium Assets/XBOX BUTTONS - Premium Assets/Svg/button_xbox_digital_start_1.svg" id="17_aocai"]
[ext_resource type="Texture2D" uid="uid://draxcw41hmogi" path="res://asets/XBOX BUTTONS - Premium Assets/XBOX BUTTONS - Premium Assets/XBOX BUTTONS - Premium Assets/Svg/button_xbox_digital_start_2.svg" id="18_xwl8u"]
[ext_resource type="Texture2D" uid="uid://coah3fw7w4jo6" path="res://asets/XBOX BUTTONS - Premium Assets/XBOX BUTTONS - Premium Assets/XBOX BUTTONS - Premium Assets/Svg/button_xbox_digital_menu_2.svg" id="19_3pas5"]
[ext_resource type="Texture2D" uid="uid://ciy36s6lmq7vj" path="res://asets/XBOX BUTTONS - Premium Assets/XBOX BUTTONS - Premium Assets/XBOX BUTTONS - Premium Assets/Svg/button_xbox_digital_menu_1.svg" id="20_u1jey"]

[sub_resource type="TileSetAtlasSource" id="TileSetAtlasSource_f2txt"]
texture = ExtResource("2_cuxq2")
0:0/0 = 0
0:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:0/0 = 0
1:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
2:0/0 = 0
2:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
3:0/0 = 0
3:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
4:0/0 = 0
4:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
5:0/0 = 0
5:0/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:0/0 = 0
8:0/0 = 0
8:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:0/0 = 0
9:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
10:0/0 = 0
10:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
11:0/0 = 0
11:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
12:0/0 = 0
12:0/0/physics_layer_1/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
13:0/0 = 0
15:0/0 = 0
16:0/0 = 0
18:0/0 = 0
19:0/0 = 0
21:0/0 = 0
22:0/0 = 0
23:0/0 = 0
24:0/0 = 0
25:0/0 = 0
26:0/0 = 0
28:0/0 = 0
29:0/0 = 0
30:0/0 = 0
0:1/0 = 0
0:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:1/0 = 0
2:1/0 = 0
3:1/0 = 0
4:1/0 = 0
5:1/0 = 0
5:1/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:1/0 = 0
8:1/0 = 0
9:1/0 = 0
10:1/0 = 0
11:1/0 = 0
12:1/0 = 0
13:1/0 = 0
15:1/0 = 0
16:1/0 = 0
18:1/0 = 0
19:1/0 = 0
21:1/0 = 0
22:1/0 = 0
23:1/0 = 0
24:1/0 = 0
25:1/0 = 0
26:1/0 = 0
28:1/0 = 0
29:1/0 = 0
30:1/0 = 0
0:2/0 = 0
0:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:2/0 = 0
2:2/0 = 0
4:2/0 = 0
5:2/0 = 0
5:2/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
21:2/0 = 0
22:2/0 = 0
23:2/0 = 0
25:2/0 = 0
26:2/0 = 0
28:2/0 = 0
29:2/0 = 0
30:2/0 = 0
0:3/0 = 0
0:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:3/0 = 0
4:3/0 = 0
5:3/0 = 0
5:3/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
9:3/0 = 0
10:3/0 = 0
15:3/0 = 0
16:3/0 = 0
21:3/0 = 0
22:3/0 = 0
25:3/0 = 0
26:3/0 = 0
28:3/0 = 0
29:3/0 = 0
30:3/0 = 0
0:4/0 = 0
0:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:4/0 = 0
2:4/0 = 0
3:4/0 = 0
4:4/0 = 0
5:4/0 = 0
5:4/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:4/0 = 0
8:4/0 = 0
9:4/0 = 0
10:4/0 = 0
11:4/0 = 0
13:4/0 = 0
14:4/0 = 0
15:4/0 = 0
16:4/0 = 0
17:4/0 = 0
21:4/0 = 0
22:4/0 = 0
23:4/0 = 0
24:4/0 = 0
25:4/0 = 0
26:4/0 = 0
28:4/0 = 0
29:4/0 = 0
30:4/0 = 0
0:5/0 = 0
0:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
1:5/0 = 0
2:5/0 = 0
3:5/0 = 0
4:5/0 = 0
5:5/0 = 0
5:5/0/physics_layer_0/polygon_0/points = PackedVector2Array(-8, -8, 8, -8, 8, 8, -8, 8)
7:5/0 = 0
8:5/0 = 0
10:5/0 = 0
11:5/0 = 0
13:5/0 = 0
14:5/0 = 0
16:5/0 = 0
17:5/0 = 0
21:5/0 = 0
22:5/0 = 0
23:5/0 = 0
24:5/0 = 0
25:5/0 = 0
26:5/0 = 0
9:6/0 = 0
10:6/0 = 0
15:6/0 = 0
16:6/0 = 0
2:7/0 = 0
3:7/0 = 0
9:7/0 = 0
10:7/0 = 0
15:7/0 = 0
16:7/0 = 0
22:7/0 = 0
23:7/0 = 0
27:7/0 = 0
28:7/0 = 0
29:7/0 = 0
0:8/0 = 0
1:8/0 = 0
2:8/0 = 0
3:8/0 = 0
4:8/0 = 0
5:8/0 = 0
9:8/0 = 0
10:8/0 = 0
22:8/0 = 0
23:8/0 = 0
27:8/0 = 0
28:8/0 = 0
29:8/0 = 0
0:9/0 = 0
1:9/0 = 0
4:9/0 = 0
5:9/0 = 0
13:9/0 = 0
14:9/0 = 0
15:9/0 = 0
16:9/0 = 0
18:9/0 = 0
19:9/0 = 0
20:9/0 = 0
22:9/0 = 0
23:9/0 = 0
27:9/0 = 0
28:9/0 = 0
29:9/0 = 0
0:10/0 = 0
1:10/0 = 0
2:10/0 = 0
3:10/0 = 0
4:10/0 = 0
5:10/0 = 0
7:10/0 = 0
8:10/0 = 0
9:10/0 = 0
10:10/0 = 0
11:10/0 = 0
13:10/0 = 0
14:10/0 = 0
15:10/0 = 0
16:10/0 = 0
18:10/0 = 0
19:10/0 = 0
20:10/0 = 0
22:10/0 = 0
23:10/0 = 0
27:10/0 = 0
28:10/0 = 0
29:10/0 = 0
0:11/0 = 0
1:11/0 = 0
2:11/0 = 0
3:11/0 = 0
4:11/0 = 0
5:11/0 = 0
7:11/0 = 0
8:11/0 = 0
9:11/0 = 0
10:11/0 = 0
11:11/0 = 0
13:11/0 = 0
14:11/0 = 0
15:11/0 = 0
16:11/0 = 0
27:11/0 = 0
28:11/0 = 0
29:11/0 = 0
0:12/0 = 0
1:12/0 = 0
2:12/0 = 0
3:12/0 = 0
4:12/0 = 0
5:12/0 = 0
13:12/0 = 0
14:12/0 = 0
15:12/0 = 0
16:12/0 = 0
18:12/0 = 0
19:12/0 = 0
20:12/0 = 0
22:12/0 = 0
23:12/0 = 0
24:12/0 = 0
25:12/0 = 0
27:12/0 = 0
28:12/0 = 0
29:12/0 = 0
0:13/0 = 0
1:13/0 = 0
4:13/0 = 0
5:13/0 = 0
7:13/0 = 0
8:13/0 = 0
9:13/0 = 0
10:13/0 = 0
11:13/0 = 0
13:13/0 = 0
14:13/0 = 0
15:13/0 = 0
16:13/0 = 0
18:13/0 = 0
19:13/0 = 0
20:13/0 = 0
22:13/0 = 0
23:13/0 = 0
24:13/0 = 0
25:13/0 = 0
27:13/0 = 0
28:13/0 = 0
29:13/0 = 0
7:14/0 = 0
8:14/0 = 0
9:14/0 = 0
10:14/0 = 0
11:14/0 = 0
13:14/0 = 0
14:14/0 = 0
15:14/0 = 0
16:14/0 = 0
27:14/0 = 0
28:14/0 = 0
29:14/0 = 0
0:15/0 = 0
1:15/0 = 0
2:15/0 = 0
3:15/0 = 0
4:15/0 = 0
5:15/0 = 0
13:15/0 = 0
14:15/0 = 0
15:15/0 = 0
16:15/0 = 0
18:15/0 = 0
19:15/0 = 0
20:15/0 = 0
22:15/0 = 0
23:15/0 = 0
27:15/0 = 0
28:15/0 = 0
29:15/0 = 0
0:16/0 = 0
1:16/0 = 0
2:16/0 = 0
3:16/0 = 0
4:16/0 = 0
5:16/0 = 0
7:16/0 = 0
8:16/0 = 0
9:16/0 = 0
10:16/0 = 0
11:16/0 = 0
13:16/0 = 0
14:16/0 = 0
15:16/0 = 0
16:16/0 = 0
18:16/0 = 0
19:16/0 = 0
20:16/0 = 0
22:16/0 = 0
23:16/0 = 0
27:16/0 = 0
28:16/0 = 0
29:16/0 = 0
0:17/0 = 0
1:17/0 = 0
7:17/0 = 0
8:17/0 = 0
9:17/0 = 0
10:17/0 = 0
11:17/0 = 0
22:17/0 = 0
23:17/0 = 0
27:17/0 = 0
28:17/0 = 0
29:17/0 = 0
0:18/0 = 0
1:18/0 = 0
2:18/0 = 0
3:18/0 = 0
4:18/0 = 0
5:18/0 = 0
27:18/0 = 0
28:18/0 = 0
0:19/0 = 0
1:19/0 = 0
2:19/0 = 0
3:19/0 = 0
4:19/0 = 0
5:19/0 = 0
7:19/0 = 0
8:19/0 = 0
9:19/0 = 0
10:19/0 = 0
11:19/0 = 0
12:19/0 = 0
13:19/0 = 0
14:19/0 = 0
15:19/0 = 0
16:19/0 = 0
17:19/0 = 0
18:19/0 = 0
19:19/0 = 0
20:19/0 = 0
21:19/0 = 0
22:19/0 = 0
24:19/0 = 0
25:19/0 = 0
26:19/0 = 0
27:19/0 = 0
28:19/0 = 0
29:19/0 = 0
30:19/0 = 0
0:20/0 = 0
1:20/0 = 0
2:20/0 = 0
3:20/0 = 0
4:20/0 = 0
5:20/0 = 0
7:20/0 = 0
8:20/0 = 0
9:20/0 = 0
10:20/0 = 0
11:20/0 = 0
12:20/0 = 0
13:20/0 = 0
14:20/0 = 0
15:20/0 = 0
16:20/0 = 0
17:20/0 = 0
18:20/0 = 0
19:20/0 = 0
20:20/0 = 0
21:20/0 = 0
22:20/0 = 0
24:20/0 = 0
25:20/0 = 0
26:20/0 = 0
27:20/0 = 0
28:20/0 = 0
29:20/0 = 0
30:20/0 = 0
0:21/0 = 0
1:21/0 = 0
2:21/0 = 0
7:21/0 = 0
8:21/0 = 0
9:21/0 = 0
10:21/0 = 0
11:21/0 = 0
12:21/0 = 0
13:21/0 = 0
14:21/0 = 0
15:21/0 = 0
16:21/0 = 0
17:21/0 = 0
18:21/0 = 0
19:21/0 = 0
27:21/0 = 0
28:21/0 = 0
29:21/0 = 0
30:21/0 = 0
14:1/0 = 0
14:0/0 = 0

[sub_resource type="TileSet" id="TileSet_0b4ue"]
physics_layer_0/collision_layer = 1
physics_layer_1/collision_layer = 1
sources/0 = SubResource("TileSetAtlasSource_f2txt")

[sub_resource type="GDScript" id="GDScript_f2txt"]
script/source = "extends Label


# Called when the node enters the scene tree for the first time.
func _ready() -> void:
	pass # Replace with function body.


# Called every frame. 'delta' is the elapsed time since the previous frame.
func _process(_delta):
	text = \"hp: \" + str($\"../../player/player\".health)
"

[sub_resource type="GDScript" id="GDScript_1ainy"]
script/source = "extends Label

func _process(_delta):
	var player = get_node_or_null(\"../player\")
	if not player:
		player = get_tree().get_first_node_in_group(\"player\")
	
	if player and player.has_method(\"get_gold\"):
		text = \"Money: \" + str(player.get_gold())
"

[node name="level2" type="Node2D"]
script = ExtResource("1_i558w")

[node name="door" parent="." instance=ExtResource("2_wvr33")]
position = Vector2(13, 489)
scale = Vector2(1.5, 1.5)

[node name="TileMapLayer" type="TileMapLayer" parent="."]
position = Vector2(-191, 148)
tile_set = SubResource("TileSet_0b4ue")

[node name="platform" type="TileMapLayer" parent="."]
position = Vector2(-1, 2)
tile_map_data = PackedByteArray("AAD//yAAAAAHAAAAAAAAACAAAAAIAAAAAAABACAAAAAJAAAAAAACACAAAAAKAAAAAAADACAAAAALAAAAAAAEACAAAAAMAAAAAAAFACAAAAANAAAAAAD//yEAAAAHAAAAAAAAACEAAAAIAAAAAAABACEAAAAJAAAAAAACACEAAAAKAAAAAAADACEAAAALAAAAAAAEACEAAAAMAAAAAAAFACEAAAANAAAAAAD//yIAAAAHAAAAAAAAACIAAAAIAAAAAAABACIAAAAJAAAAAAACACIAAAAKAAAAAAADACIAAAALAAAAAAAEACIAAAAMAAAAAAAFACIAAAANAAAAAAD//yMAAAAHAAAAAAAAACMAAAAIAAAAAAABACMAAAAJAAAAAAACACMAAAAKAAAAAAADACMAAAALAAAAAAAEACMAAAAMAAAAAAAFACMAAAANAAAAAAD//yQAAAAHAAAAAAAAACQAAAAIAAAAAAABACQAAAAJAAAAAAACACQAAAAKAAAAAAADACQAAAALAAAAAAAEACQAAAAMAAAAAAAFACQAAAANAAAAAAD//yUAAAAHAAAAAAAAACUAAAAIAAAAAAABACUAAAAJAAAAAAACACUAAAAKAAAAAAADACUAAAALAAAAAAAEACUAAAAMAAAAAAAFACUAAAANAAAAAAD//yYAAAAHAAAAAAAAACYAAAAIAAAAAAABACYAAAAJAAAAAAACACYAAAAKAAAAAAADACYAAAALAAAAAAAEACYAAAAMAAAAAAAFACYAAAANAAAAAAAGACAAAAAHAAAAAAAHACAAAAAIAAAAAAAIACAAAAAJAAAAAAAJACAAAAAKAAAAAAAKACAAAAALAAAAAAALACAAAAAMAAAAAAAMACAAAAANAAAAAAAGACEAAAAHAAAAAAAHACEAAAAIAAAAAAAIACEAAAAJAAAAAAAJACEAAAAKAAAAAAAKACEAAAALAAAAAAALACEAAAAMAAAAAAAMACEAAAANAAAAAAAGACIAAAAHAAAAAAAHACIAAAAIAAAAAAAIACIAAAAJAAAAAAAJACIAAAAKAAAAAAAKACIAAAALAAAAAAALACIAAAAMAAAAAAAMACIAAAANAAAAAAAGACMAAAAHAAAAAAAHACMAAAAIAAAAAAAIACMAAAAJAAAAAAAJACMAAAAKAAAAAAAKACMAAAALAAAAAAALACMAAAAMAAAAAAAMACMAAAANAAAAAAAGACQAAAAHAAAAAAAHACQAAAAIAAAAAAAIACQAAAAJAAAAAAAJACQAAAAKAAAAAAAKACQAAAALAAAAAAALACQAAAAMAAAAAAAMACQAAAANAAAAAAAGACUAAAAHAAAAAAAHACUAAAAIAAAAAAAIACUAAAAJAAAAAAAJACUAAAAKAAAAAAAKACUAAAALAAAAAAALACUAAAAMAAAAAAAMACUAAAANAAAAAAAGACYAAAAHAAAAAAAHACYAAAAIAAAAAAAIACYAAAAJAAAAAAAJACYAAAAKAAAAAAAKACYAAAALAAAAAAALACYAAAAMAAAAAAAMACYAAAANAAAAAAANACAAAAAHAAAAAAAOACAAAAAIAAAAAAAPACAAAAAJAAAAAAAQACAAAAAKAAAAAAARACAAAAALAAAAAAASACAAAAAMAAAAAAATACAAAAANAAAAAAANACEAAAAHAAAAAAAOACEAAAAIAAAAAAAPACEAAAAJAAAAAAAQACEAAAAKAAAAAAARACEAAAALAAAAAAASACEAAAAMAAAAAAATACEAAAANAAAAAAANACIAAAAHAAAAAAAOACIAAAAIAAAAAAAPACIAAAAJAAAAAAAQACIAAAAKAAAAAAARACIAAAALAAAAAAASACIAAAAMAAAAAAATACIAAAANAAAAAAANACMAAAAHAAAAAAAOACMAAAAIAAAAAAAPACMAAAAJAAAAAAAQACMAAAAKAAAAAAARACMAAAALAAAAAAASACMAAAAMAAAAAAATACMAAAANAAAAAAANACQAAAAHAAAAAAAOACQAAAAIAAAAAAAPACQAAAAJAAAAAAAQACQAAAAKAAAAAAARACQAAAALAAAAAAASACQAAAAMAAAAAAATACQAAAANAAAAAAANACUAAAAHAAAAAAAOACUAAAAIAAAAAAAPACUAAAAJAAAAAAAQACUAAAAKAAAAAAARACUAAAALAAAAAAASACUAAAAMAAAAAAATACUAAAANAAAAAAANACYAAAAHAAAAAAAOACYAAAAIAAAAAAAPACYAAAAJAAAAAAAQACYAAAAKAAAAAAARACYAAAALAAAAAAASACYAAAAMAAAAAAATACYAAAANAAAAAAAUACAAAAAHAAAAAAAVACAAAAAIAAAAAAAWACAAAAAJAAAAAAAXACAAAAAKAAAAAAAYACAAAAALAAAAAAAZACAAAAAMAAAAAAAaACAAAAANAAAAAAAUACEAAAAHAAAAAAAVACEAAAAIAAAAAAAWACEAAAAJAAAAAAAXACEAAAAKAAAAAAAYACEAAAALAAAAAAAZACEAAAAMAAAAAAAaACEAAAANAAAAAAAUACIAAAAHAAAAAAAVACIAAAAIAAAAAAAWACIAAAAJAAAAAAAXACIAAAAKAAAAAAAYACIAAAALAAAAAAAZACIAAAAMAAAAAAAaACIAAAANAAAAAAAUACMAAAAHAAAAAAAVACMAAAAIAAAAAAAWACMAAAAJAAAAAAAXACMAAAAKAAAAAAAYACMAAAALAAAAAAAZACMAAAAMAAAAAAAaACMAAAANAAAAAAAUACQAAAAHAAAAAAAVACQAAAAIAAAAAAAWACQAAAAJAAAAAAAXACQAAAAKAAAAAAAYACQAAAALAAAAAAAZACQAAAAMAAAAAAAaACQAAAANAAAAAAAUACUAAAAHAAAAAAAVACUAAAAIAAAAAAAWACUAAAAJAAAAAAAXACUAAAAKAAAAAAAYACUAAAALAAAAAAAZACUAAAAMAAAAAAAaACUAAAANAAAAAAAUACYAAAAHAAAAAAAVACYAAAAIAAAAAAAWACYAAAAJAAAAAAAXACYAAAAKAAAAAAAYACYAAAALAAAAAAAZACYAAAAMAAAAAAAaACYAAAANAAAAAAAbACAAAAAHAAAAAAAcACAAAAAIAAAAAAAdACAAAAAJAAAAAAAeACAAAAAKAAAAAAAfACAAAAALAAAAAAAgACAAAAAMAAAAAAAhACAAAAANAAAAAAAbACEAAAAHAAAAAAAcACEAAAAIAAAAAAAdACEAAAAJAAAAAAAeACEAAAAKAAAAAAAfACEAAAALAAAAAAAgACEAAAAMAAAAAAAhACEAAAANAAAAAAAbACIAAAAHAAAAAAAcACIAAAAIAAAAAAAdACIAAAAJAAAAAAAeACIAAAAKAAAAAAAfACIAAAALAAAAAAAgACIAAAAMAAAAAAAhACIAAAANAAAAAAAbACMAAAAHAAAAAAAcACMAAAAIAAAAAAAdACMAAAAJAAAAAAAeACMAAAAKAAAAAAAfACMAAAALAAAAAAAgACMAAAAMAAAAAAAhACMAAAANAAAAAAAbACQAAAAHAAAAAAAcACQAAAAIAAAAAAAdACQAAAAJAAAAAAAeACQAAAAKAAAAAAAfACQAAAALAAAAAAAgACQAAAAMAAAAAAAhACQAAAANAAAAAAAbACUAAAAHAAAAAAAcACUAAAAIAAAAAAAdACUAAAAJAAAAAAAeACUAAAAKAAAAAAAfACUAAAALAAAAAAAgACUAAAAMAAAAAAAhACUAAAANAAAAAAAbACYAAAAHAAAAAAAcACYAAAAIAAAAAAAdACYAAAAJAAAAAAAeACYAAAAKAAAAAAAfACYAAAALAAAAAAAgACYAAAAMAAAAAAAhACYAAAANAAAAAAAiACAAAAAHAAAAAAAjACAAAAAIAAAAAAAkACAAAAAJAAAAAAAlACAAAAAKAAAAAAAmACAAAAALAAAAAAAnACAAAAAMAAAAAAAoACAAAAANAAAAAAAiACEAAAAHAAAAAAAjACEAAAAIAAAAAAAkACEAAAAJAAAAAAAlACEAAAAKAAAAAAAmACEAAAALAAAAAAAnACEAAAAMAAAAAAAoACEAAAANAAAAAAAiACIAAAAHAAAAAAAjACIAAAAIAAAAAAAkACIAAAAJAAAAAAAlACIAAAAKAAAAAAAmACIAAAALAAAAAAAnACIAAAAMAAAAAAAoACIAAAANAAAAAAAiACMAAAAHAAAAAAAjACMAAAAIAAAAAAAkACMAAAAJAAAAAAAlACMAAAAKAAAAAAAmACMAAAALAAAAAAAnACMAAAAMAAAAAAAoACMAAAANAAAAAAAiACQAAAAHAAAAAAAjACQAAAAIAAAAAAAkACQAAAAJAAAAAAAlACQAAAAKAAAAAAAmACQAAAALAAAAAAAnACQAAAAMAAAAAAAoACQAAAANAAAAAAAiACUAAAAHAAAAAAAjACUAAAAIAAAAAAAkACUAAAAJAAAAAAAlACUAAAAKAAAAAAAmACUAAAALAAAAAAAnACUAAAAMAAAAAAAoACUAAAANAAAAAAAiACYAAAAHAAAAAAAjACYAAAAIAAAAAAAkACYAAAAJAAAAAAAlACYAAAAKAAAAAAAmACYAAAALAAAAAAAnACYAAAAMAAAAAAAoACYAAAANAAAAAAApACAAAAAHAAAAAAAqACAAAAAIAAAAAAArACAAAAAJAAAAAAAsACAAAAAKAAAAAAAtACAAAAALAAAAAAAuACAAAAAMAAAAAAAvACAAAAANAAAAAAApACEAAAAHAAAAAAAqACEAAAAIAAAAAAArACEAAAAJAAAAAAAsACEAAAAKAAAAAAAtACEAAAALAAAAAAAuACEAAAAMAAAAAAAvACEAAAANAAAAAAApACIAAAAHAAAAAAAqACIAAAAIAAAAAAArACIAAAAJAAAAAAAsACIAAAAKAAAAAAAtACIAAAALAAAAAAAuACIAAAAMAAAAAAAvACIAAAANAAAAAAApACMAAAAHAAAAAAAqACMAAAAIAAAAAAArACMAAAAJAAAAAAAsACMAAAAKAAAAAAAtACMAAAALAAAAAAAuACMAAAAMAAAAAAAvACMAAAANAAAAAAApACQAAAAHAAAAAAAqACQAAAAIAAAAAAArACQAAAAJAAAAAAAsACQAAAAKAAAAAAAtACQAAAALAAAAAAAuACQAAAAMAAAAAAAvACQAAAANAAAAAAApACUAAAAHAAAAAAAqACUAAAAIAAAAAAArACUAAAAJAAAAAAAsACUAAAAKAAAAAAAtACUAAAALAAAAAAAuACUAAAAMAAAAAAAvACUAAAANAAAAAAApACYAAAAHAAAAAAAqACYAAAAIAAAAAAArACYAAAAJAAAAAAAsACYAAAAKAAAAAAAtACYAAAALAAAAAAAuACYAAAAMAAAAAAAvACYAAAANAAAAAAAwACAAAAAHAAAAAAAxACAAAAAIAAAAAAAyACAAAAAJAAAAAAAzACAAAAAKAAAAAAA0ACAAAAALAAAAAAA1ACAAAAAMAAAAAAA2ACAAAAANAAAAAAAwACEAAAAHAAAAAAAxACEAAAAIAAAAAAAyACEAAAAJAAAAAAAzACEAAAAKAAAAAAA0ACEAAAALAAAAAAA1ACEAAAAMAAAAAAA2ACEAAAANAAAAAAAwACIAAAAHAAAAAAAxACIAAAAIAAAAAAAyACIAAAAJAAAAAAAzACIAAAAKAAAAAAA0ACIAAAALAAAAAAA1ACIAAAAMAAAAAAA2ACIAAAANAAAAAAAwACMAAAAHAAAAAAAxACMAAAAIAAAAAAAyACMAAAAJAAAAAAAzACMAAAAKAAAAAAA0ACMAAAALAAAAAAA1ACMAAAAMAAAAAAA2ACMAAAANAAAAAAAwACQAAAAHAAAAAAAxACQAAAAIAAAAAAAyACQAAAAJAAAAAAAzACQAAAAKAAAAAAA0ACQAAAALAAAAAAA1ACQAAAAMAAAAAAA2ACQAAAANAAAAAAAwACUAAAAHAAAAAAAxACUAAAAIAAAAAAAyACUAAAAJAAAAAAAzACUAAAAKAAAAAAA0ACUAAAALAAAAAAA1ACUAAAAMAAAAAAA2ACUAAAANAAAAAAAwACYAAAAHAAAAAAAxACYAAAAIAAAAAAAyACYAAAAJAAAAAAAzACYAAAAKAAAAAAA0ACYAAAALAAAAAAA1ACYAAAAMAAAAAAA2ACYAAAANAAAAAAA3ACAAAAAHAAAAAAA4ACAAAAAIAAAAAAA5ACAAAAAJAAAAAAA6ACAAAAAKAAAAAAA7ACAAAAALAAAAAAA8ACAAAAAMAAAAAAA9ACAAAAANAAAAAAA3ACEAAAAHAAAAAAA4ACEAAAAIAAAAAAA5ACEAAAAJAAAAAAA6ACEAAAAKAAAAAAA7ACEAAAALAAAAAAA8ACEAAAAMAAAAAAA9ACEAAAANAAAAAAA3ACIAAAAHAAAAAAA4ACIAAAAIAAAAAAA5ACIAAAAJAAAAAAA6ACIAAAAKAAAAAAA7ACIAAAALAAAAAAA8ACIAAAAMAAAAAAA9ACIAAAANAAAAAAA3ACMAAAAHAAAAAAA4ACMAAAAIAAAAAAA5ACMAAAAJAAAAAAA6ACMAAAAKAAAAAAA7ACMAAAALAAAAAAA8ACMAAAAMAAAAAAA9ACMAAAANAAAAAAA3ACQAAAAHAAAAAAA4ACQAAAAIAAAAAAA5ACQAAAAJAAAAAAA6ACQAAAAKAAAAAAA7ACQAAAALAAAAAAA8ACQAAAAMAAAAAAA9ACQAAAANAAAAAAA3ACUAAAAHAAAAAAA4ACUAAAAIAAAAAAA5ACUAAAAJAAAAAAA6ACUAAAAKAAAAAAA7ACUAAAALAAAAAAA8ACUAAAAMAAAAAAA9ACUAAAANAAAAAAA3ACYAAAAHAAAAAAA4ACYAAAAIAAAAAAA5ACYAAAAJAAAAAAA6ACYAAAAKAAAAAAA7ACYAAAALAAAAAAA8ACYAAAAMAAAAAAA9ACYAAAANAAAAAAA+ACAAAAAHAAAAAAA/ACAAAAAIAAAAAABAACAAAAAJAAAAAABBACAAAAAKAAAAAABCACAAAAALAAAAAABDACAAAAAMAAAAAABEACAAAAANAAAAAAA+ACEAAAAHAAAAAAA/ACEAAAAIAAAAAABAACEAAAAJAAAAAABBACEAAAAKAAAAAABCACEAAAALAAAAAABDACEAAAAMAAAAAABEACEAAAANAAAAAAA+ACIAAAAHAAAAAAA/ACIAAAAIAAAAAABAACIAAAAJAAAAAABBACIAAAAKAAAAAABCACIAAAALAAAAAABDACIAAAAMAAAAAABEACIAAAANAAAAAAA+ACMAAAAHAAAAAAA/ACMAAAAIAAAAAABAACMAAAAJAAAAAABBACMAAAAKAAAAAABCACMAAAALAAAAAABDACMAAAAMAAAAAABEACMAAAANAAAAAAA+ACQAAAAHAAAAAAA/ACQAAAAIAAAAAABAACQAAAAJAAAAAABBACQAAAAKAAAAAABCACQAAAALAAAAAABDACQAAAAMAAAAAABEACQAAAANAAAAAAA+ACUAAAAHAAAAAAA/ACUAAAAIAAAAAABAACUAAAAJAAAAAABBACUAAAAKAAAAAABCACUAAAALAAAAAABDACUAAAAMAAAAAABEACUAAAANAAAAAAA+ACYAAAAHAAAAAAA/ACYAAAAIAAAAAABAACYAAAAJAAAAAABBACYAAAAKAAAAAABCACYAAAALAAAAAABDACYAAAAMAAAAAABEACYAAAANAAAAAABFACAAAAAHAAAAAABGACAAAAAIAAAAAABHACAAAAAJAAAAAABFACEAAAAHAAAAAABGACEAAAAIAAAAAABHACEAAAAJAAAAAABFACIAAAAHAAAAAABGACIAAAAIAAAAAABHACIAAAAJAAAAAABFACMAAAAHAAAAAABGACMAAAAIAAAAAABHACMAAAAJAAAAAABFACQAAAAHAAAAAABGACQAAAAIAAAAAABHACQAAAAJAAAAAABFACUAAAAHAAAAAABGACUAAAAIAAAAAABHACUAAAAJAAAAAABFACYAAAAHAAAAAABGACYAAAAIAAAAAABHACYAAAAJAAAAAAA=")
tile_set = SubResource("TileSet_0b4ue")

[node name="player" type="Node2D" parent="."]

[node name="player" parent="player" instance=ExtResource("3_wvr33")]
position = Vector2(18, 498)
script = ExtResource("4_sgm4o")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Label" type="Label" parent="CanvasLayer"]
offset_left = 25.0
offset_top = 8.0
offset_right = 175.0
offset_bottom = 95.0
theme_override_font_sizes/font_size = 35
text = "hp"
script = SubResource("GDScript_f2txt")

[node name="Label2" type="Label" parent="CanvasLayer"]
offset_left = 27.0
offset_top = 54.0
offset_right = 177.0
offset_bottom = 141.0
theme_override_font_sizes/font_size = 35
text = "mony"
script = SubResource("GDScript_1ainy")

[node name="Virtual Joystick" parent="CanvasLayer" instance=ExtResource("5_6r3eb")]
offset_left = 42.0
offset_top = -178.0
offset_right = 168.0
offset_bottom = -44.0

[node name="a botton" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(934, 527)
scale = Vector2(0.24, 0.24)
texture_normal = ExtResource("6_2pufk")
texture_pressed = ExtResource("7_btc8u")

[node name="y botton" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(933, 355.00003)
scale = Vector2(0.24, 0.24)
texture_normal = ExtResource("8_ikghu")
texture_pressed = ExtResource("9_i6smf")

[node name="botton dash" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(790, 327)
scale = Vector2(0.2375, 0.2375)
texture_normal = ExtResource("10_d4rhq")
texture_pressed = ExtResource("11_ldfcd")
script = ExtResource("12_41lt0")

[node name="x botton" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(848, 441)
scale = Vector2(0.24, 0.24)
texture_normal = ExtResource("13_t8cg7")
texture_pressed = ExtResource("14_o5ykh")

[node name="b botton" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(1021, 441.00003)
scale = Vector2(0.24, 0.24)
texture_normal = ExtResource("15_e6ygx")
texture_pressed = ExtResource("16_xlxjt")

[node name="restart" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(1057, -15.999939)
scale = Vector2(0.8166671, 0.833333)
texture_normal = ExtResource("17_aocai")
texture_pressed = ExtResource("18_xwl8u")

[node name="menu" type="TouchScreenButton" parent="CanvasLayer"]
position = Vector2(988.00006, 1)
scale = Vector2(0.6583332, 0.67176795)
texture_normal = ExtResource("19_3pas5")
texture_pressed = ExtResource("20_u1jey")

[connection signal="pressed" from="CanvasLayer/a botton" to="player/player" method="_on_a_botton_pressed"]
[connection signal="released" from="CanvasLayer/a botton" to="player/player" method="_on_a_botton_released"]
[connection signal="pressed" from="CanvasLayer/y botton" to="player/player" method="_on_y_botton_pressed"]
[connection signal="released" from="CanvasLayer/y botton" to="player/player" method="_on_y_botton_released"]
[connection signal="pressed" from="CanvasLayer/botton dash" to="player/player" method="_on_botton_dash_pressed"]
[connection signal="pressed" from="CanvasLayer/x botton" to="player/player" method="_on_x_botton_pressed"]
[connection signal="released" from="CanvasLayer/x botton" to="player/player" method="_on_x_botton_released"]
[connection signal="pressed" from="CanvasLayer/b botton" to="player/player" method="_on_b_botton_pressed"]
[connection signal="pressed" from="CanvasLayer/restart" to="player/player" method="_on_restart_pressed"]
[connection signal="pressed" from="CanvasLayer/menu" to="player/player" method="_on_menu_pressed"]
